2007-02-16  John W. Eaton  <jwe@octave.org>

	* dynamic-ld.cc (octave_dynamic_loader::do_load_oct): Clear
	function if original was loaded from relative path and the name
	can no longer be found in path.  Mark files found from relative
	path as relative.
	(clear): Only warn if there is more than one function to clear.

	* variables.cc (symbol_out_of_date): Don't ignore return value in
	call to octave_env::make_absolute.
	(symbol_out_of_date): Clear symbol if original was loaded from
	relative path and name can no longer be found in path.

	* dynamic-ld.cc (octave_dynamic_loader::do_load_oct):
	Also check whether new file is same as the old file.

	* utils.cc (same_file): Move here from variables.cc.
	* utils.h: (same_file): Provide decl.

	* parse.y (frob_function): Stash parent function name if parsing
	nested function.

	* ov-fcn-handle.cc (make_fcn_handle): Pass current function name
	as parent in call to lookup_function.

	* ov-fcn.h (octave_function::parent_fcn_name): New virtual function.

	* ov-usr-fcn.h (octave_user_function::parent_name): New data member.
	(octave_user_function::stash_parent_function_name,
	octave_user_function::parent_function_name): New methods.
	* ov-usr-fcn.cc (octave_user_function::octave_user_function):
	Initialize parent_name.

	* variables.h, variables.cc (lookup_function): New arg, parent.
	If not empty, try this first for lookup.

	* dynamic-ld.cc (octave_dynamic_loader::do_load_mex): If doing
	path lookup, check relative status. Pass relative to oct_file_in_path.
	(octave_dynamic_loader::do_load_mex): Likewise, for mex_file_in_path

	* defun-int.h, defun.cc (install_mex_function): New arg, relative.
	(install_dld_function): Likewise.
	(octave_dld_fcn_installer): Likewise.
	(DEFINE_FUNX_INSTALLER_FUN3): Pass relative to install_dld_function.

	* dynamic-ld.h (octave_dynamic_loader::load_oct,
	octave_dynamic_loader::load_mex,
	octave_dynamic_loader::do_load_oct
	octave_dynamic_loader::do_load_mex): New arg, relative.
