@@ -995,12 +995,7 @@ symbol_out_of_date (symbol_record *sr)
 
       octave_function *fcn = ans.function_value (true);
 
-      // No need to check nested functions.  They can only be executed
-      // from within the parent function that contains them.  Parent
-      // and nested functions will be updated simultaneously when we
-      // check the parent.
-
-      if (fcn && ! fcn->is_nested_function ())
+      if (fcn)
 	{
 	  std::string ff = fcn->fcn_file_name ();
 
